[gd_scene load_steps=10 format=3 uid="uid://bic5nels0gapo"]

[ext_resource type="Script" path="res://Scenes/HUD/hud.gd" id="1_rhw4k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jay7v"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo8ev"]
bg_color = Color(0.171772, 0.281919, 0.671947, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_070va"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5put7"]
bg_color = Color(0.605763, 0.113498, 0.143727, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_766iu"]
bg_color = Color(0.184314, 0.184314, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tj08e"]
bg_color = Color(0.480387, 0.127849, 0.0803008, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_evfr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0q4p"]
bg_color = Color(0.381793, 0.618802, 0.858781, 1)

[node name="HUD" type="Node2D"]
script = ExtResource("1_rhw4k")

[node name="Display" type="CanvasLayer" parent="."]

[node name="TopPanel" type="Control" parent="Display"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.5
offset_right = 234.5
offset_bottom = 89.0
grow_horizontal = 2

[node name="TeamScoreBlue" type="ProgressBar" parent="Display/TopPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 25.0
offset_right = -51.0
offset_bottom = 62.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_jay7v")
theme_override_styles/fill = SubResource("StyleBoxFlat_vo8ev")
max_value = 10.0
show_percentage = false

[node name="Label" type="Label" parent="Display/TopPanel/TeamScoreBlue"]
layout_mode = 0
offset_left = 1.0
offset_right = 53.0
offset_bottom = 36.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TeamScoreRed" type="ProgressBar" parent="Display/TopPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = 50.0
offset_top = 25.0
offset_right = 199.0
offset_bottom = 62.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_070va")
theme_override_styles/fill = SubResource("StyleBoxFlat_5put7")
max_value = 10.0
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="Display/TopPanel/TeamScoreRed"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 37.0
grow_horizontal = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Label" parent="Display/TopPanel"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 61.0
grow_horizontal = 2
text = "4:36"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomLeft" type="Control" parent="Display"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -112.0
offset_right = 287.0
grow_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="Display/BottomLeft"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.5
offset_top = 60.0
offset_right = 47.5
offset_bottom = 97.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_766iu")
theme_override_styles/fill = SubResource("StyleBoxFlat_tj08e")
show_percentage = false

[node name="Label" type="Label" parent="Display/BottomLeft/HealthBar"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 37.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShieldBar" type="ProgressBar" parent="Display/BottomLeft"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.5
offset_top = 13.0
offset_right = 47.5
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_evfr4")
theme_override_styles/fill = SubResource("StyleBoxFlat_y0q4p")
show_percentage = false

[node name="Label" type="Label" parent="Display/BottomLeft/ShieldBar"]
layout_mode = 0
offset_right = 30.0
offset_bottom = 36.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomRight" type="Control" parent="Display"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -112.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ammo" type="Label" parent="Display/BottomRight"]
layout_mode = 0
offset_left = 152.0
offset_top = 50.0
offset_right = 239.0
offset_bottom = 100.0
text = "19 / 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponIcon1" type="TextureRect" parent="Display/BottomRight"]
layout_mode = 0
offset_left = 118.0
offset_top = 3.0
offset_right = 201.0
offset_bottom = 43.0

[node name="WeaponIcon2" type="TextureRect" parent="Display/BottomRight"]
layout_mode = 0
offset_left = 116.0
offset_top = -51.0
offset_right = 199.0
offset_bottom = -11.0
